--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
@@ -8,15 +8,17 @@
 	
 	
 		<!-- Nav -->
-		<div>
+		<nav>
 			<div>
-				<ul>
-					<a href="#home" id="link"><li>HOME</li></a>
-					<a href="#gallery"><li>GALLERY</li></a>
-					<a href="#contact"><li>CONTACTS</li></a>
-				</ul>
+				<div>
+					<ul>
+						<a href="#home" id="link"><li>HOME</li></a>
+						<a href="#gallery"><li>GALLERY</li></a>
+						<a href="#contact"><li>CONTACTS</li></a>
+					</ul>
+				</div>
 			</div>
-		</div>
+		</nav>
 		<!-- END NAV -->
 		
 		<!-- HOME -->
